<?xml version="1.0"?>
<package format="2">
  <name>dwa_planner</name>
  <version>0.0.0</version>
  <description>The dwa_planner ROS package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>dwa_planner_core</depend>
  <depend>dwa_planner_msgs</depend>
  <export>
  </export>
</package>